# mtlBiodiversity

./: .RDataTmp1  .Rhistory  .env  .gitignore  README.md  R_analysis.smk  Snakefile  Snakefile copy  Snakemake  analysis.smk  chatgpt_outline.md  config.py  config.yaml  data.csv  duckdbCon.ipynb  filters.smk  mysql.sql  preprocess.smk  pyproject.toml  report.html  requirements.txt  samples.yaml  setup.py  streamlit_app.py  test.shx
R/: 101.R  grid_analysis_01.R  group_analysis.R  ids_samplingBias.rds  natserv_status.R  samplingBias.R  vegan_101.R
_roadmap/mtlParkBiodiversity/: DataScience.md  DataViz.canvas  ETL - park data uniformisation.md  Metrics.md  README.md  Roadmap.md  Untitled.base  to_do_etl.md
data/: speciesQcStatus.csv
data/.config/: Espace_Vert_column_mapping.json  QuartierReferenceHabitation_fixed_column_mapping.json  grid_hex_250_column_mapping.json  parks_column_mapping.json  (+2 more)
data_prep/: boundaries.py  gbif_data.py
envs/: my_env.yaml  r_envs.yaml
filters/: filter1.wkt
notebooks/: convertGeojson.ipynb  coordinatesIssueCheck.ipynb  datetime.ipynb  gbif_api.ipynb  grid_observations.ipynb  userFilterWip.ipynb
pipeline/: analysis.smk  filters.smk  preprocess.smk
scripts/: 01_clean_geospatial.py  01_convertGbifData.py  01_loadGbifData.py  02_clean_shapefiles.py  02_createDuckdb.py  02_loadGbifData.py  03_createDuckdb  03_createDuckdb.py  03_loadGbifData.py  04_load_shapefiles.py  04_shp_tables.py  04_spatial_join.py  05_filterGbifData.py  05_grid_sjoin.py  06_grid_sjoin.py  06_shp_sjoin.py  07_shp_sjoin.py
tests/: gbif_table.sql  mysql.sql
(+94 files in other folders)
