[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mtlBio"
version = "0.0.4"
description = "MTL Biodiversity Project"
authors = [{ name="Etienne Godin", email="etiennegodin@duck.com" }]
dependencies = [
    'geopandas',
    'pandas',
    'numpy',
    'duckdb',
    'duckdb-extensions',
    'duckdb-extension-spatial',
    'seaborn',
    'matplotlib',
    'streamlit',
    'streamlit-folium',
    'plotly',
    'shapely',
    'argparse',
    'folium'
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[project.scripts]   # <-- entry point CLI
mytool = "mtlBio.cli:main"